--- a/extensions/theme-extension/blocks/app_gallery.liquid
+++ b/extensions/theme-extension/blocks/app_gallery.liquid
@@ -18,12 +18,12 @@ Assumptions:
 
     <!-- Hidden login modal container -->
     <div id="login-modal-container" style="display:none;">
-       test modal here 
+      {% render 'login-modal' %}
     </div>
-
+  
     <!-- Hidden upload gallery modal container -->
     <div id="upload-gallery-modal-container" style="display:none;">
-    test modal here 
+      {% render 'upload-gallery-modal' %}
     </div>
 
     <div class="Polaris-Card__Section">
