--- a/extensions/theme-extension/snippets/upload-gallery-modal.liquid
+++ b/extensions/theme-extension/snippets/upload-gallery-modal.liquid
@@ -1,4 +1,4 @@
-<div id="upload-gallery-modal-overlay" class="Polaris-Backdrop" style="display: none;">
+<div id="upload-gallery-modal-overlay" class="Polaris-Backdrop" style="display: block;">
   <div class="Polaris-Modal-Dialog__Container">
     <div class="Polaris-Modal-Dialog">
       <div class="Polaris-Modal-Header">
